--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ celery = "^5.2.6"
 redis = "^4.2.2"
 ipython = "^8.2.0"
 drf-spectacular = "^0.22.0"
+dj-database-url = "^0.5.0"
+django-cors-headers = "^3.11.0"
+djangorestframework-camel-case = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 
