--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ drf-spectacular = "^0.22.0"
 dj-database-url = "^0.5.0"
 django-cors-headers = "^3.11.0"
 djangorestframework-camel-case = "^1.3.0"
+pytest-django = "^4.5.2"
+factory-boy = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 
