--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,8 +18,11 @@ jobs:
         uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: 1.1.10
-      - name: View poetry --help
-        run: poetry --help
+      - name: Install poetry dependencies
+        run: poetry install
+
+      - name: Start tests
+        run: poetry run pytest -rP
 #  CD:
 ##    needs: [CI]
 #    runs-on: ubuntu-latest
